# radioforms

./: .gitignore  .taskmasterconfig  BUILD-AND-TEST.md  BUILD-STATUS.md  BUILD-VERIFICATION.md  CICD.md  CLAUDE.md  CLAUDE_CODE_DEVELOPMENT_PLAN.md  CODESIGNING.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_README.md  EMERGENCY-HOTFIX-GUIDE.md  FULL_DELIVERY_STRATEGY.md  GITHUB-ACTIONS-SETUP.md  INCONSISTENCY_ANALYSIS_REPORT.md  INSTALLATION.md  LICENSE  MANDATORY.md  PHASE_4_VALIDATION_GATE_ASSESSMENT.md  PLAN.md  QUICK-START.md  QUICK-TEST.md  README.md  RELEASE_CHECKLIST.md  SUPPORT-PROCESS.md  TROUBLESHOOTING.md  UI-TEST-REPORT.md  USER-MANUAL.md  WINDOWS-BUILD-GUIDE.md  alembic.ini  architecture_analysis.md  cargocheckerr.txt  check_python.py  compilation-error-analysis-report.md  data_architecture_analysis.md  debug_multi_form.py  detailed_refactoring_recommendations.md  err.txt  eslint.config.js  index.html  (+72 more)
.clinerules/: clinerules.md  global_rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  emergency-support.yml  emergency_incident.md  feature-request.yml  feature_request.md  standard-support.yml
.github/workflows/: build-cross-platform.yml  build-windows.yml  build.yml  release.yml  test.yml
.taskmaster/docs/: prd.txt
docs/: DB-Update.md  DB.md  Form-Models-Update.md  ICS-202-Analysis.md  ICS-204-Analysis.md  ICS-205-Analysis.md  ICS-206-Analysis.md  ICS-208-Analysis.md  ICS-209-Analysis.md  ICS-210-Analysis.md  ICS-211-Analysis.md  ICS-215-Analysis.md  ICS-215A-Analysis.md  ICS-218-Analysis.md  ICS-225-Analysis.md  ICS-Forms-Analysis-Summary.md  PERFORMANCE_BENCHMARKS.md  UI-UX.md  USER_MANUAL.md  USER_TESTING_GUIDE.md  deployment.md  documentation-analysis.md  faq.md  form-demand-analysis.md  form_models.md  forms_analysis.md  generic-rules.md  getting-started.md  ics-des.md  odoo-ui.md  prd.md  release-checklist.md  support-architecture.md  tdd.md  template-system-design.md  template-system-development-guide.md  troubleshooting.md  ui-ux-spec-complete.md  ui.md  user-feedback-analysis.md  (+1 more)
docs/adr/: 001-documentation-standards.md  002-database-architecture.md
docs/api/: forms-api.md
e2e/: IMPLEMENTATION-STATUS.md  README.md  basic-ui-test.spec.ts  comprehensive-functional.spec.ts  emergency-workflows.spec.ts  form-templates-bulk.spec.ts  global-setup.ts  global-teardown.ts  performance.spec.ts  test-config.ts  test-status-report.md  ui-state-verification.spec.ts
forms/: ICS-201-Analysis.md  ICS-202-Analysis.md  ICS-203-Analysis.md  ICS-204-Analysis.md  ICS-205-Analysis.md  ICS-205A-Analysis.md  ICS-206-Analysis.md  ICS-207-Analysis.md  ICS-208-Analysis.md  ICS-209-Analysis.md  ICS-210-Analysis.md  ICS-211-Analysis.md  ICS-213-Analysis.md  ICS-214-Analysis.md  ICS-215-Analysis.md  ICS-215A-Analysis.md  ICS-218-Analysis.md  ICS-220-Analysis.md  ICS-221-Analysis.md  ICS-225-Analysis.md  ICS-Forms-Analysis-Summary.md  forms_analysis.md
migrations/: README.md  env.py
migrations/versions/: eb3215dc68fc_added_missing_schema_objects.py  initial_schema.py
radioforms/: README-dao-refactoring.md  README-dao.md  __init__.py  dao_analysis.md  dao_next_tasks.md  dao_refactoring_summary.md  dao_refactoring_tasks.md  main.py  main_enhanced.py
radioforms/config/: __init__.py  app_config.py  config_manager.py
radioforms/controllers/: __init__.py  api_controller.py  api_controller_refactored.py  app_controller.py  app_controller_enhanced.py  app_controller_refactored.py  forms_controller.py
radioforms/database/: __init__.py  db_manager.py  db_manager_sqlalchemy.py  orm_models.py  query_optimizer.py  query_profiler.py  repositories.py  schema_manager.py
radioforms/docs/: dao_patterns.md  dao_usage_examples.md
radioforms/forms/: __init__.py
radioforms/models/: __init__.py  base_form.py  dataclass_forms.py  enhanced_form_resolver.py  enhanced_ics213_form.py  enhanced_ics214_form.py  form_model_registry.py  form_model_registry.py.bak  form_persistence.py  form_persistence_manager.py  form_registry.py  ics213_form.py  ics214_form.py
radioforms/tests/: hello_world.py  run_enhanced_tests.py  test_api_controller.py  test_attachment_schema_migration.py  test_bulk_operations.py  (+25 more)
rules/: generic-rules.md  pyside6-rules.md  python-rules.md
scripts/: build-release.bat  build-release.sh  build_linux.sh  build_macos.sh  build_windows.bat  create_version_info.py  demo_attachment_migration.py  enhance_form_loading.py  fix_date_serialization.py  fix_form_registry_queries.py  fix_form_serialization.py  fix_form_state_transitions.py  fix_test_mock_expectations.py  install_fixed_form_registry.py  prd.txt  resolve_schema_discrepancies.py  run_attachment_migration.py  run_form_schema_update.py  run_integration_tests.py  schema_migration.py  task-complexity-report.json  test-windows-build.sh  test_deployment.py  test_fixed_form_registry.py  update_form_registry_tests.py  update_test_mocks.py
src/: App.tsx  index.css  main.py  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/: 001_initial_schema.sql  001_simple_schema.sql  002_enhanced_schema.sql  003_validation_constraints.sql  004_performance_indexes.sql  004_performance_indexes_rollback.sql  005_add_missing_form_fields.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auto_save_commands.rs  backup_commands.rs  export_commands.rs  form_commands.rs  integration_tests.rs  mod.rs  settings_commands.rs  simple_commands.rs  validation_commands.rs
src-tauri/src/database/: compaction.rs  crud_operations.rs  errors.rs  integration_tests.rs  integrity_checker.rs  migration_runner.rs  migration_tests.rs  migrations.rs  mod.rs  schema.rs  simple.rs  simple_tests.rs  transactions.rs
src-tauri/src/models/: export.rs  form.rs  form_data.rs  ics_types.rs  mod.rs  serde_tests.rs  validation.rs
src-tauri/src/services/: auto_save.rs  mod.rs
src-tauri/src/templates/: help.rs  loader.rs  mod.rs  parser.rs  resources.rs  schema.rs  validator.rs  version.rs
src-tauri/src/utils/: mod.rs  serialization.rs
src-tauri/templates/: ics-201.json
(+136 files in other folders)
