[package]
name = "radioforms"
version = "1.0.0"
description = "RadioForms - STANDALONE ICS Forms Management Application"
authors = ["RadioForms Team"]
edition = "2021"
default-run = "radioforms"

# CRITICAL: Single executable configuration
[[bin]]
name = "radioforms"
path = "src/main.rs"

[lib]
name = "radioforms_lib"
crate-type = ["cdylib", "rlib"]  # Remove staticlib to reduce compile time

# Fast development profile
[profile.dev]
opt-level = 0           # No optimization for fastest compile
debug = true            # Keep debug info for development
lto = false             # No link-time optimization
codegen-units = 256     # Parallel compilation for speed
incremental = true      # Enable incremental compilation

# Optimize for single file deployment
[profile.release]
lto = true              # Link-time optimization for smaller binary
codegen-units = 1       # Better optimization at cost of compile time
panic = "abort"         # Smaller binary size
strip = true            # Remove debug symbols
opt-level = "z"         # Optimize for size

# Fast development dependencies
[profile.dev.package."*"]
opt-level = 1           # Light optimization for dependencies
debug = false           # Reduce debug info for dependencies

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"

